[project]
name = "casvisor-python-sdk"
version = "0.1.0"
description = "Python SDK for Casvisor"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Casvisor", email = "admin@casvisor.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Home" = "https://github.com/casvisor/casvisor-python-sdk"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
